@@ -22,6 +22,7 @@ from __future__ import print_function
 
 import re
 import os
+import sys
 
 import six
 
@@ -267,6 +268,15 @@ class PageKde(plugin.PluginUI):
             self.page = None
         self.plugin_widgets = self.page
 
+    @staticmethod
+    def make_qstring(s):
+        """Python 2/3 compatibility hack."""
+        if sys.version >= '3':
+            return s
+        else:
+            from PyQt4.QtCore import QString
+            return QString(s)
+
     @plugin.only_this_page
     def on_keyboard_layout_selected(self, *args):
         layout = self.get_keyboard()
@@ -303,10 +313,9 @@ class PageKde(plugin.PluginUI):
             self.controller.dbfilter.apply_keyboard(layout, variant)
 
     def set_keyboard_choices(self, choices):
-        from PyQt4.QtCore import QString
         self.page.keyboard_layout_combobox.clear()
         for choice in sorted(choices):
-            self.page.keyboard_layout_combobox.addItem(QString(
+            self.page.keyboard_layout_combobox.addItem(self.make_qstring(
                 misc.utf8(choice)))
 
         if self.current_layout is not None:
@@ -314,8 +323,7 @@ class PageKde(plugin.PluginUI):
 
     @plugin.only_this_page
     def set_keyboard (self, layout):
-        from PyQt4.QtCore import QString
-        index = self.page.keyboard_layout_combobox.findText(QString(
+        index = self.page.keyboard_layout_combobox.findText(self.make_qstring(
             misc.utf8(layout)))
 
         if index > -1:
@@ -333,16 +341,14 @@ class PageKde(plugin.PluginUI):
         return six.text_type(self.page.keyboard_layout_combobox.currentText())
 
     def set_keyboard_variant_choices(self, choices):
-        from PyQt4.QtCore import QString
         self.page.keyboard_variant_combobox.clear()
         for choice in sorted(choices):
-            self.page.keyboard_variant_combobox.addItem(QString(
+            self.page.keyboard_variant_combobox.addItem(self.make_qstring(
                 misc.utf8(choice)))
 
     @plugin.only_this_page
     def set_keyboard_variant(self, variant):
-        from PyQt4.QtCore import QString
-        index = self.page.keyboard_variant_combobox.findText(QString(
+        index = self.page.keyboard_variant_combobox.findText(self.make_qstring(
             misc.utf8(variant)))
 
         if index > -1:
